Add task model, refactor, rename
