# TaxiDepo.Server/Dto/CountUserRidesDto.cs
@@ -2,6 +2,9 @@
 
 namespace TaxiDepo.Server.Dto;
 
+/// <summary>
+/// Count user rides dto
+/// </summary>
 public class CountUserRidesDto
 {
     /// <summary>
@@ -20,7 +23,17 @@ public class CountUserRidesDto
     public string? UserPatronymic { get; set; }
 
     /// <summary>
+    /// User patronymic
+    /// </summary>
+    public string? UserPhoneNumber { get; set; }
+
+    /// <summary>
     /// Amount user rides
     /// </summary>
     public int AmountRides { get; set; }
+
+    /// <summary>
+    /// User trip date
+    /// </summary>
+    public DateTime UserDate { get; set; }
 }
