# TaxiDepo.Server/MappingProfile.cs
@@ -17,9 +17,7 @@ public class MappingProfile : Profile
         CreateMap<Car, CarDto>().ReverseMap();
         CreateMap<Driver, DriverDto>().ReverseMap();
         CreateMap<Ride, RideDto>();
-        CreateMap<RideDto, Ride>()
-            .ForMember(ride => ride.TripTime, s =>
-                s.MapFrom(ride => TimeSpan.FromSeconds(ride.TripTime)));
+        CreateMap<RideDto, Ride>();
         CreateMap<User, UserDto>().ReverseMap();
     }
 }
